crates/uitest/fixtures/ty_check/effect_ambiguous_generic.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/effect_ambiguous_generic.fe
---
error[8-0040]: multiple effect candidates found
   ┌─ effect_ambiguous_generic.fe:14:9
   │
14 │         needs_storage()
   │         ^^^^^^^^^^^^^^^ effect `Storage<T>` is ambiguous when calling `needs_storage`
